@@ -336,6 +336,49 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>importTestData</id>
+      <activation>
+        <property>
+          <name>!skipTests</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>import-test-data</id>
+                <phase>process-test-classes</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>java</executable>
+                  <arguments>
+                    <argument>-classpath</argument>
+                    <classpath/>
+                    <argument>-Xmx4g</argument>
+                    <argument>-Duser.timezone=UTC</argument>
+                    <argument>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/java.net=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                    <argument>-Dpathling.version=${project.version}</argument>
+                    <argument>-Dpathling.terminology.enabled=false</argument>
+                    <argument>-Dspark.master=local[1]</argument>
+                    <argument>au.csiro.pathling.test.TestDataImporter</argument>
+                    <argument>${project.basedir}/src/test/resources/test-data/fhir</argument>
+                    <argument>${project.basedir}/src/test/resources/test-data/parquet</argument>
+                  </arguments>
+                  <classpathScope>test</classpathScope>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
-
 </project>
